# emubench-dolphin

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  cloudbuild.yaml
Source/Core/: CMakeLists.txt
Source/Core/AudioCommon/: AudioCommon.cpp
Source/Core/Common/Logging/: Log.h  LogManager.cpp
Source/Core/Core/: CMakeLists.txt  Core.cpp  Core.h  State.cpp
Source/Core/Core/Config/: MainSettings.cpp
Source/Core/Core/HW/: GCPad.cpp  GCPad.h
Source/Core/Core/HW/DSPHLE/UCodes/: AX.cpp
Source/Core/Core/HW/SI/: SI_Device.cpp  SI_Device.h  SI_DeviceGCController.h
Source/Core/DolphinNoGUI/: CMakeLists.txt  MainNoGUI.cpp
Source/Core/DolphinQt/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h
Source/Core/DolphinQt/Config/: GamecubeControllersWidget.cpp
Source/Core/DolphinQt/Config/Mapping/: MappingWindow.cpp  MappingWindow.h
Source/Core/IPC/: CMakeLists.txt  ControllerCommands.cpp  ControllerCommands.h  FirestoreClient.h  GcpClient.h  HTTPServer.cpp  HTTPServer.h  MemWatch.cpp  MemWatch.h  MemWatcher.cpp  MemWatcher.h  SaveState.cpp  SaveState.h
Source/Core/VideoCommon/: FrameDumper.cpp  FrameDumper.h  Present.cpp  Present.h  VideoConfig.cpp
deploy/: Dockerfile  build.sh  entrypoint.sh
deploy/amd/: Dockerfile
deploy/arm/: Dockerfile  build.sh  entrypoint.sh
deploy/base/: Dockerfile  boot-instance.sh  build-cloud.sh  build.sh  entrypoint.sh
deploy/configs/: Dolphin.ini
deploy/game/: Dockerfile  build-all.sh  build-cloud.sh  build.sh  cloudbuild-game.yaml
docs/Emubench/: wind_waker.md
(+2 files in other folders)
